# code-ontology-exploration

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
research/: literature.md  metrics-roadmap.md
scripts/: run_pipeline.py  serve.py
src/code_ontology/: author_classifier.py  cochange_graph.py  config.py  git_history.py  metrics.py  repo_loader.py  server.py  topology.py
web/: index.html
web/static/css/: style.css
web/static/js/: app.js  authors.js  compare.js  graph.js  infopanel.js  lab.js  timeline.js  topology.js
